apps/homelab/proxmox/proxmox.yaml
# https://192.168.4.170:8006/
---
apiVersion: v1
kind: Namespace
metadata:
  name: proxmox
---

apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: proxmox
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8006
      targetPort: 8006
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  namespace: proxmox
  # by convention, use the name of the Service
  # as a prefix for the name of the EndpointSlice
  name: proxmox-1
  labels:
    kubernetes.io/service-name: proxmox
addressType: IPv4
ports:
  - name: https 
    appProtocol: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - "192.168.4.170"
