apps/homelab/proxmox/proxmox-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: proxmox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,192.168.0.0/16,172.20.0.0/12,10.244.0.0/16
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: proxmox.local.abbottland.io
    http:
      paths:
      - backend:
          service:
            name: proxmox
            port:
              number: 8006
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - proxmox.local.abbottland.io
    secretName: proxmox-tls
